--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-MONGO_URL=mongodb://localhost:27017/april_bakery
-PORT=3001
-JWT_SECRET=wadwadjajwjda
-CLIENT_URL=http://localhost:3000
+MONGO_URL = mongodb://localhost:27017/april_bakery
+PORT = 3001
+ACCESS_TOKEN_SECRET = AA$vjFpWmE&VAh5KT\`-Dz=Pjn)HG`Z{dN@.De_\uGv:HJ7hf~
+REFRESH_TOKEN_SECRET = w.#%'r6@D-MW,"`zxj)6bM[9F!aA]v?Km+LaTp\Ep}j^2`('\{8tzHxpV@qfC),L:SCb2?ukDC^x45>[N}!K[k`E!b8$.}J+v<C.
+
+CLOUDINARY_NAME=aprilbakery
+CLOUDINARY_API_KEY=142671659898421
+CLOUDINARY_API_SECRET=SCvAMH-7fkF2okaR3VJWdUvCscY
+
+CLIENT_URL = http://localhost:3000
